# jetpack-joyride

./: CMakeLists.txt
Resources/: best.txt
finalReport/: 2025OOPL_Final.md
include/: Animation.hpp  App.hpp  Background.hpp  BackgroundImage.hpp  BestDistance.hpp  Camera.hpp  Coin.hpp  CoinCounter.hpp  CoinGroup.hpp  CoinManager.hpp  CollisionManager.hpp  DistanceCounter.hpp  DistanceText.hpp  Equipment.hpp  GravitySuit.hpp  ILevel.hpp  Level.hpp  Level1.hpp  Level10.hpp  Level2.hpp  Level3.hpp  Level4.hpp  Level5.hpp  Level6.hpp  Level7.hpp  Level8.hpp  Level9.hpp  LevelSelect.hpp  LilStomper.hpp  Logo.hpp  MissionDescription.hpp  Object.hpp  PauseMenu.hpp  Player.hpp  Zapper.hpp  ZapperManager.hpp  missile.hpp
src/: Animation.cpp  App.cpp  Background.cpp  BestDistance.cpp  Coin.cpp  CoinCounter.cpp  CoinGroup.cpp  CoinManager.cpp  CollisionManager.cpp  DistanceCounter.cpp  Equipment.cpp  GravitySuit.cpp  Level1.cpp  Level10.cpp  Level2.cpp  Level3.cpp  Level4.cpp  Level5.cpp  Level6.cpp  Level7.cpp  Level8.cpp  Level9.cpp  LevelSelect.cpp  LilStomper.cpp  Logo.cpp  Missile.cpp  MissionDescription.cpp  Object.cpp  PauseMenu.cpp  Player.cpp  Zapper.cpp  ZapperManager.cpp  main.cpp  missile.cpp
